--- a/src/global.scss
+++ b/src/global.scss
@@ -38,13 +38,19 @@ ion-header,ion-toolbar {
   --color : map-get($pxb-white, 50);
   --background: map-get($pxb-blue, 500); 
   background: map-get($pxb-blue, 500);
-  font-family: Open Sans, sans-serif; 
   border: none;
+  --padding-top: 0;
+  --padding-start:0;
+  --padding-bottom:0;
+  --padding-end: 0;
   padding: 0;
+  margin: 0;
 }
 
 ion-button{
   color: map-get($pxb-white, 50);
   --padding-start : 0px;
   --padding-end : 0px;
+  margin: 0;
+  height: 24px;
 }
